eda-external-packages/eda-api-ingress-https/api-ingress-tls-terminate-https-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eda-api-ingress
  namespace: eda-system # kpt-set: ${EDA_CORE_NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" # Connect from ingress to eda-api service using HTTPS
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/add-base-url: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600" # 10 minute read timeout for proxy request responses
    nginx.ingress.kubernetes.io/server-snippet: |
      client_header_buffer_size 128k;
      large_client_header_buffers 4 128k;
    # Uncomment to force TLS 1.3 between the ingress client and the backend eda-api service
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   proxy_ssl_protocols TLSv1.3;
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eda-api
            port:
              number: 443 # kpt-set: ${INT_HTTPS_PORT}
  ingressClassName: nginx
